# SubRipTimeOffSet

./: .gitignore  Commander.csproj  LICENSE  README.md  Startup.cs
AppointmentScheduling/: AppointmentScheduling.sln  Dockerfile
CSharpSolution/: SubTitlesTimeOffSet.sln
Controllers/: CommandsController.cs
Data/: ICommanderRepo.cs  MockCommanderRepo.cs  SqlCommanderRepo.cs
Dtobjs/: CommandCreateDto.cs  CommandReadDtObjs.cs
InAndOut/: GlobalSuppressions.cs  InAndOut.csproj  Startup.cs
LesJackson.NET_Core_3.1_MVC_REST_API/: Commander.csproj  Commander.sln
Migrations/: 20210620183437_initial_migration.cs
Profiles/: CommandsProfile.cs
Properties/: launchSettings.json
PythonSolution/: .dockerignore  README.md  build-docker.sh  dockerfile  main.py  run-docker.sh
RustSolution/: Cargo.toml  Dockerfile  Insomnia_test_api_workspace.yml  README.md  build-docker.sh  docker-compose.yaml  run-docker.sh
RustSolution/src/: lib.rs  main.rs  schema.rs
RustSolution/src/subrip/: mod.rs
RustSolution/subrip_offset_api/: Cargo.toml
RustSolution/wks/: Cargo.toml
RustSolution/wks/migrations/2021-06-05-192240_registry/: down.sql  up.sql
RustSolution/wks/src/: lib.rs
RustSolution/wks/subrip_sqlite3_parser/: .env  Cargo.toml
RustSolution/wks/subrip_sqlite3_parser/migrations/2021-06-05-192240_create_posts/: up.sql
RustSolution/wks/subrip_sqlite3_parser/migrations/2021-06-05-192240_registry/: down.sql  up.sql
RustSolution/wks/subrip_sqlite3_parser/src/: lib.rs  models.rs  schema.rs
RustSolution/wks/wks/subrip_sqlite3_parser/src/: models.rs  schema.rs
(+125 files in other folders)
