[package]
name = "subrip_offset_api"
version = "0.1.0"
authors = ["Rafael Lúcio <rafaellucio@pm.me>"]
edition = "2018"


[workspace]
members = [
    ".",                        # Defines current directory as a workspace crate
    "wks/subrip_sqlite3_parser",
]

[dependencies]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
